add email to user
