# app/controllers/api/v1/users_controller.rb
@@ -45,6 +45,6 @@ class Api::V1::UsersController < ApplicationController
   end
 
   def user_params
-    params.require(:user).permit(:name, :tax_id, :avatar)
+    params.require(:user).permit(:name, :tax_id, :avatar, :email)
   end
 end
